--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@react-navigation/bottom-tabs": "^5.2.4",
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.6",
-    "expo": "~36.0.0",
+    "expo": "^36.0.2",
+    "expo-font": "^8.1.0",
+    "native-base": "^2.13.12",
     "prop-types": "^15.7.2",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
