--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
@@ -13,6 +17,8 @@
     "@react-navigation/native": "^5.1.3",
     "@react-navigation/stack": "^5.2.6",
     "expo": "^37.0.0",
+    "expo-cli": "^3.17.18",
+    "expo-font": "~8.1.0",
     "native-base": "^2.13.12",
     "prop-types": "^15.7.2",
     "react": "16.9.0",
@@ -23,12 +29,13 @@
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "^0.11.7",
-    "styled-components": "^5.0.1",
-    "expo-font": "~8.1.0"
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.0.0",
     "babel-preset-expo": "^8.1.0",
-    "@babel/core": "^7.0.0"
+    "jest-expo": "^37.0.0",
+    "react-native-testing-library": "^1.13.0"
   },
   "private": true
 }
