--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo/universal"
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.6",
